QQuick3DNode: Fix application order of local/parent rotation matrices

This fixes Node.sceneRotation of non-uniform scaling but uniform regarding
the rotation axis. The original application order was just wrong since
our convention is Mscene = Mparent ... * Mlocal.

I'm not sure what is expected if the rotation plane is scaled
non-uniformly. The current implementation appears to ignore the scaling.

Task-number: QTBUG-101371
Change-Id: Ideef5936b77e1fa05891af541e09fc6b242daa8b
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
Reviewed-by: Inho Lee <inho.lee@qt.io>
(cherry picked from commit 160fc912b462c89626b47cd7c3ecbb0dad5182ac)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>